--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -3,17 +3,26 @@
     <h2 class="f2 b lh-title mb2">{{.intro.heading}}</h2>
     <p class="mb4 mw6">{{.intro.text}}</p>
 
-    <div class="flex-ns mhn2-ns mb3">
+    <dl class="accordion">
       {{ range .products }}
-      <div class="ph2-ns w-50-ns">
-        <img src="{{.image}}" alt="" class="center db mb3" style="width: 240px">
-        <p>{{.text}}</p>
-      </div>
+      <dt><a href="">{{.title}}</a></dt>
+      <dd>{{.text}}</dd>
       {{ end }}
-    </div>
+    </dl>
 
-    <div class="tc">
-      <a href="/products" class="btn raise">See all products</a>
-    </div>
   </div>
 </div>
+
+<script>
+  (function($) {
+
+    var allPanels = $('.accordion > dd').hide();
+
+    $('.accordion > dt > a').click(function() {
+      allPanels.slideUp();
+      $(this).parent().next().slideDown();
+      return false;
+    });
+
+  })(jQuery);
+</script>
