--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -4,7 +4,7 @@
     <p class="mb4 mw6">{{.intro.text}}</p>
 
     <dl class="accordion">
-      {{ range .products }}
+      {{ range .benefits }}
       <dt><a href="">{{.title}}</a></dt>
       <dd>{{.text}}</dd>
       {{ end }}
