--- a/src/css/imports/_accordion.css
+++ b/src/css/imports/_accordion.css
@@ -21,7 +21,7 @@
 }
 .accordion dt a, .accordion dd a {
     display: block;
-    color: black;
+    color: #fff;
     font-weight: bold;
 }
 .accordion dd {
