--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,6 +28,7 @@
 @import './imports/_reset';
 
 /* Modules */
+@import './imports/_accordion';
 @import './imports/_box-sizing';
 @import './imports/_images';
 @import './imports/_background-size';
