--- a/src/css/imports/_accordion.css
+++ b/src/css/imports/_accordion.css
@@ -15,6 +15,7 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     text-decoration: none;
+    margin-top: 10px;
 }
 .accordion dt:last-of-type, .accordion dd:last-of-type {
     border-bottom: 1px solid black;
