--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -12,7 +12,7 @@
       {{ end }}
     </dl>
 
-    <ul class="quotes">
+    <ul class="reasons-to-join">
       {{ range .quotes }}
       <li>{{.title}}</li>
       {{ end }}
