--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -12,6 +12,11 @@
       {{ end }}
     </dl>
 
+    <hr />
+
+
+    <h3 class="f3 b -title mb3">{{.reasons.heading}}</h3>
+
     <ul class="reasons-to-join">
       {{ range .quotes }}
       <li>{{.title}}</li>
