--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-black ph3 pv4 white">
+<footer class="ph3 pv4 white" style="background-color: #989898">
 
 	<div class="mw7 center pt3">
 
